<resources>
    <string name="app_name">WishlistApp</string>
    <string name="item_image">item image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="current_location">Current location</string>
    <string name="new_wish">New wish</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="photo">Photo</string>
    <string name="saved">Saved</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="add">Add</string>
    <string name="notification_title">You are close to your wish</string>
    <string name="notification">Your wish is waiting for you!</string>
    <string name="removing_are_you_sure">Are you sure you want to remove %s?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="removed">Item removed</string>

</resources>